wip: - new DB schema to store all submissions - required queries, API and endpoints - some cleanup
