# utils/src/types.ts
@@ -1,7 +1,6 @@
 import type { IGetSubmissionResult } from '@game/db';
 import type { WalletAddress } from 'paima-sdk/paima-utils';
 
-// todo: think about better type here maybe - not directly DB interface
-export type RoundExecutorData = IGetSubmissionResult;
+
 
 
